recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:9: error: recursive variable length needs type
    var length = length + increment
                 ^Spiral:8: error: recursive variable steps needs type
    var steps = steps - 1
                ^